# mobishare

./: .gitignore  AGENTS.md  LICENSE  README.md  fastapi_openapi.yaml  springboot_openapi.yaml
DB/: ddl.sql  dumpDB.sql
MobileApp/: App.tsx  README.md  app.json  babel.config.js  package-lock.json  package.json  react-native.config.js  shared-data.json  tsconfig.json
MobileApp/android/: gradle.properties  settings.gradle
MobileApp/android/app/: build.gradle
MobileApp/ios/: Podfile
MobileApp/ios/MobiShare/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
MobileApp/ios/MobiShare.xcodeproj/: project.pbxproj
MobileApp/src/AiChat/: ChatButton.tsx  ChatScreen.tsx  ChatWrapper.tsx
MobileApp/src/Contexts/: AuthContext.tsx
MobileApp/src/Navigation/: AuthStack.tsx  CorsaStack.tsx  HomeStack.tsx  ManagerStack.tsx  NavbarStack.tsx  PermaSuspendedStack.tsx  ProfileStack.tsx  RootNavigator.tsx  SuspendedStack.tsx  WalletStack.tsx
MobileApp/src/Requests/: AiRequests.ts  (+10 more)
backend_ai/: .env_example  README.md  dependencies.py  main.py  pyproject.toml  requirements.txt
backend_ai/db/models/: feedback.py  maintenance_plan.py  user_face.py
backend_ai/resources/user_guide/: profile.txt  start_race.txt  wallet.txt
backend_ai/routers/: face_recognition.py  mobi_agent.py  smart_assistant.py
backend_ai/services/: face_recognition_service.py  feedback_service.py  maintenance_plan_service.py
backend_ai/services/mobi_agents/: admin_agent.py  manager_agent.py  user_agent.py
backend_ai/services/mobi_agents/tools/: admin_tools.py  manager_tools.py  user_tools.py
backend_core/: README.md  pom.xml
simulator/: README.md  pom.xml
(+205 files in other folders)
